geral update 2022